<resources>
    <string name="app_name">Book</string>
    <string name="book_locator">BOOK LOCATOR</string>
    <string name="book_a_book">BOOK A BOOK</string>
    <string name="hello_there_welcome">HELLO THERE, WELCOME</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="college_email_id">College Email Id</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="sign_in">Sign In</string>
    <string name="go">GO</string>
    <string name="scan_the_barcode_of_the_id_card">SCAN THE BARCODE OF THE ID CARD</string>
    <string name="scan">SCAN</string>
    <string name="scan_the_barcode_of_your_college_id_to_continue_once_the_barcode_number_matches_with_the_your_enrollment_number_the_identification_process_is_completed_click_continue_to_go_to_the_login_page">Scan the barcode of your college ID to continue. Once the barcode number matches with the your enrollment number, the identification process is completed. Click \'Continue\' to go to the login Page</string>
    <string name="next">NEXT</string>
</resources>