<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerActivity">

    <ImageView
        android:id="@+id/ivLogoHalf"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="275dp"
        android:transitionName="logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/bungee"
        android:gravity="center_horizontal"
        android:text="@string/scan_the_barcode_of_the_id_card"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ivCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoHalf" />

    <ImageView
        android:id="@+id/ivCode"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputs"
        android:elevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScan"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/code"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCode" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="358dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:padding="1dp"
        android:text="@string/scan_the_barcode_of_your_college_id_to_continue_once_the_barcode_number_matches_with_the_your_enrollment_number_the_identification_process_is_completed_click_continue_to_go_to_the_login_page"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/inputs"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>